# -

./: .env.example  .gitignore  AGENTS.md  PDF文件格式.docx  README.md  启动项目.bat  软件开发说明书.docx  软件开发说明书.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: responses.py  router.py
backend/app/api/routes/: admin.py  analysis.py  chart.py  geo.py  platform.py  report.py  topic_analysis.py
backend/app/core/: config.py  errors.py
backend/app/db/: session.py
backend/app/models/: analysis.py  chart.py  platform.py  report.py  topic_analysis.py
backend/app/schemas/: analysis.py  chart.py  common.py  platform.py  report.py  topic_analysis.py
backend/app/services/chart/: calculator.py  constants.py
backend/app/services/geo/: cities.py  search.py
backend/app/services/llm/: client.py  topics.py
backend/app/services/report/: pdf.py
backend/tests/: test_app.py  test_llm_client.py
docs/: architecture.md  v1-development-prep.md
frontend/: next-env.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/community/: page.tsx
frontend/app/member/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/organization/: page.tsx
frontend/app/profiles/: page.tsx
frontend/components/: account-shell.tsx  admin-shell.tsx  bazi-cycle-board.tsx  bazi-portrait.tsx  bazi-timing-table.tsx  nav-icon.tsx  theme-toggle.tsx  topic-navigation.tsx
frontend/types/: api.ts
scripts/: start-local.ps1
(+5 files in other folders)
