[project]
name = "bazi-backend"
version = "0.1.0"
description = "FastAPI backend for the Bazi chart web app."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "lunar-python",
  "openai",
  "reportlab"
]

[project.optional-dependencies]
calendar = [
  "sxtwl"
]
dev = [
  "httpx",
  "pytest",
  "pytest-asyncio",
  "ruff"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
